pivot to NextJS

--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "tiberius-s.github.io",
-  "description": "personal site",
-  "license": "MIT",
-  "homepage": "https://tiberius-s.github.io/",
+  "private": true,
   "scripts": {
-    "develop": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "deploy": "npm run build && gh-pages -d public -b master"
+    "dev": "next",
+    "build": "next build && next export",
+    "deploy": "next build && touch out/.nojekyll && git add out/ && git commit -m \"Deploy\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "gatsby": "^2.15.28",
-    "gatsby-cli": "^2.7.53",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
